Expose the "autocapitalize" attribute of the text input field to the IME extension.

Bug: 786434
Change-Id: I7f18cf55c99c61ad398015430818626aedd4da1e
Reviewed-on: https://chromium-review.googlesource.com/1098739
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Commit-Queue: Shu Chen <shuchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567531}
Former-commit-id: f134fb094b6badc3726f8ccf60e0e9a5f0f19af7