chrome/browser/extensions/api/input_ime/input_ime_api.h
@@ -16,6 +16,7 @@
 #include "build/build_config.h"
 #include "chrome/browser/profiles/profile.h"
 #include "chrome/browser/ui/input_method/input_method_engine_base.h"
+#include "chrome/common/extensions/api/input_ime.h"
 #include "components/keyed_service/core/keyed_service.h"
 #include "content/public/browser/notification_observer.h"
 #include "content/public/browser/notification_registrar.h"
@@ -88,6 +89,9 @@ class ImeObserver : public input_method::InputMethodEngineBase::Observer {
   virtual bool ConvertInputContextAutoCorrect(
       IMEEngineHandlerInterface::InputContext input_context);
   virtual bool ConvertInputContextAutoComplete(
+      IMEEngineHandlerInterface::InputContext input_context);
+  virtual extensions::api::input_ime::AutoCapitalizeType
+  ConvertInputContextAutoCapitalize(
       IMEEngineHandlerInterface::InputContext input_context);
   virtual bool ConvertInputContextSpellCheck(
       IMEEngineHandlerInterface::InputContext input_context);
